[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "sck-core-execute"
version = "0.0.6"
description = "Core Automation Engine execute Lambda function"
authors = ["James Barwick <jbarwick@me.com>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["sck", "core", "aws", "cloud", "automation"]

[[tool.poetry.packages]]
include = "core_execute"

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = ">=1.35.93"
botocore = ">=1.35.93"
PyYAML = "^6.0.2"
pyyaml-include = "^2.1"
rich = "^13.9.4"
darkdetect = "^0.8.0"
sck-core-report = "^0.0.5"


[tool.poetry.dependencies.sck-core-db]
path = "../sck-core-db"
develop = true

[tool.poetry.dependencies.sck-core-framework]
path = "../sck-core-framework"
develop = true
[tool.poetry-dynamic-versioning.substitution]
files = ["core_execute/__init__.py"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
cfn-lint = "^1.22.3"
pytest-asyncio = "^0.25.0"
black = "^24.10.0"
boto3-stubs = ">=1.35.93"
pytest-dotenv = "^0.5.2"
types-pyyaml = "^6.0.12.20240917"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
execute = "core_execute.cli:main"
